@@ -1,5 +1,11 @@
-        * work on filesystem check worker (Fsck).  off by default, unless
-          it's enabled via protocol. (WORK IN PROGRESS)
+        * filesystem checker (Fsck worker).  off by default, unless
+          it's enabled via protocol.  (you should use updated mogadm)
+
+        * replication speed-up on configurations with only 1 host.
+          (replication would randomly have no suggestions before, when
+           there was only 1 target host, so replication would be rescheduled
+           until the future, when random returned a different device on
+           that host)
 
 2007-04-17: Release version 2.08
 
